	- Lava source blocks are now renewable.  Lava will
	  melt nearby blocks of hellfire.

	- Lilypads can now grow on the highest level of flowing
	  water, as well as source blocks, so lilypad farming
	  will work with HCB even when water is extremely scarce.

	- Restored old pre-v0.12 heat logic for dirt/clay
	  farms, to be consistent with BTW pattern of using
	  a 3x3 fire source for max efficiency.

	- Improvements to clay/dirt farming SFX.


v0.15
	- Press for making soul sand must now be built out of
	  sufficiently hard materials.

	- Added risk to soul sand fabrication: the process is
	  now highly exothermic.


v0.14
	- Soul sand is now renewable.  Fresh souls extracted
	  from the living must be forced into sand at high
	  mechanical pressure.

	- Replaced mossy stone with cobblestone in netherrack
	  recipe, as moss stone is too expensive compared to
	  netherrack.


v0.13
	- First publicly-available version of BWR, distributed
	  in source form, with MCP, BTW, and Minecraft as
	  external dependencies.  Requires perl, python (for mcp),
	  and a unix-like programming environment with a bsd-
	  or gnu-like make.

	- Make diamond recycling recipe lossless, as it already
	  consumes a lot of other resources, and diamonds are not
	  very useful for tool applications, being inferior to
	  steel in many ways.

	- Made Neterrack renewable.  Stew mossy cobblestone with
	  nether wart, and infuse one soul of the damned.


v0.12
	- Added risk to lapis recovery recipe: lapis is now just
	  destroyed if you forget to add a bonding agent.

	- Reduced amount of heat needed in clay/dirt farms for max
	  speed, to reduce the number of block checks needed and
	  avoid performance issues with very large farms


v0.11
	- Added some audible effects to clay/dirt farms.


v0.10
	- First private test release.

	- Dirt is now renewable.  There is a block in BTW that is
	  dirt-like and nutrient-rich, but unsuitable for planting